@@ -5,6 +5,7 @@ import java.util.HashMap;
 import java.util.Map;
 import org.cytoscape.application.CyApplicationManager;
 import org.cytoscape.application.swing.ActionEnableSupport;
+import org.cytoscape.event.CyEventHelper;
 import org.cytoscape.view.model.CyNetworkViewManager;
 import org.cytoscape.work.ServiceProperties;
 import org.systemsbiology.cyBioFabric.internal.biofabric.util.ResourceManager;
@@ -14,14 +15,14 @@ String preferredMenu = null;
 String largeIconURL = "/images/Back24.gif";
 String smallIconURL = null;
 String tooltip = title; 
-String inMenuBar = new Boolean(false).toString(); 
-String inToolBar = new Boolean(true).toString(); 
-String insertSeparatorBefore = new Boolean(true).toString();
-String insertSeparatorAfter = new Boolean(false).toString();
+String inMenuBar = Boolean.valueOf(false).toString(); 
+String inToolBar = Boolean.valueOf(true).toString(); 
+String insertSeparatorBefore = Boolean.valueOf(true).toString();
+String insertSeparatorAfter = Boolean.valueOf(false).toString();
 String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 String accelerator = null; 
 String menuGravity = null; 
-String toolBarGravity = new Float(5.01).toString();*/
+String toolBarGravity = Float.valueOf(5.01).toString();*/
 /*
  * Class is responsible for building the biofabric menu items and toolbar items
  * */
@@ -29,14 +30,22 @@ public class BioFabricAbstractCyActionBuilder {
 
 	CyApplicationManager applicationManager;
 	CyNetworkViewManager networkViewManager;
-	TaskFactoryPredicate taskFactoryPredicate;
+	BioFabricViewFactoryPredicate taskFactoryPredicate;
+	BioFabricViewPropertySelectedPredicate taskFactorySelectedNodeEdgePredicate;
+	BioFabricStopButtonFactoryPredicate taskFactoryStopButtonPredicate;//used for the cancel button
+	CyEventHelper cyEventHelperRef;
 	
-	public BioFabricAbstractCyActionBuilder(CyApplicationManager applicationManager,
-			CyNetworkViewManager networkViewManager, TaskFactoryPredicate taskFactoryPredicate){
+	public BioFabricAbstractCyActionBuilder(CyEventHelper cyEventHelperRef, CyApplicationManager applicationManager,
+			CyNetworkViewManager networkViewManager, BioFabricViewFactoryPredicate taskFactoryPredicate, 
+			BioFabricViewPropertySelectedPredicate taskFactorySelectedNodeEdgePredicate,
+			BioFabricStopButtonFactoryPredicate taskFactoryStopButtonPredicate){
 
 		this.applicationManager = applicationManager;
 		this.networkViewManager = networkViewManager;
-		this.taskFactoryPredicate = taskFactoryPredicate;		
+		this.taskFactoryPredicate = taskFactoryPredicate;
+		this.taskFactorySelectedNodeEdgePredicate = taskFactorySelectedNodeEdgePredicate;
+		this.taskFactoryStopButtonPredicate = taskFactoryStopButtonPredicate;
+		this.cyEventHelperRef = cyEventHelperRef;
 	}
 	
 	/******************************************************************************************************************
@@ -51,20 +60,43 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = "/images/ZoomToFabricSelected24.gif";
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(false).toString(); 
-		String inToolBar = new Boolean(true).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
 		String menuGravity = null; 
-		String toolBarGravity = new Float(5.02).toString();
+		String toolBarGravity = Float.valueOf(5.02f).toString();
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ToolBarZoomToCurrentAction zoomToCurrentAction = new ToolBarZoomToCurrentAction(configProps, applicationManager, networkViewManager, taskFactoryPredicate);
+		ToolBarZoomToCurrentAction zoomToCurrentAction = new ToolBarZoomToCurrentAction(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);
 		buttons.add(zoomToCurrentAction);
 		return zoomToCurrentAction;	
+	}
+	
+	public ToolBarCancel buildACancelButton(ArrayList<BioFabricImageIcon> buttons){
+		Map<String, String> configProps = new HashMap<String, String>();
+		String title = ResourceManager.getManager().getString("exportDialog.cancel");
+		String preferredMenu = null;
+		String largeIconURL = "/images/Stop24.gif";
+		String smallIconURL = null;
+		String tooltip = title; 
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
+		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
+		String accelerator = null; 
+		String menuGravity = null; 
+		String toolBarGravity = Float.valueOf(5.02f).toString();
+		
+		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
+				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
+		ToolBarCancel cancelAction = new ToolBarCancel(configProps, applicationManager, networkViewManager, taskFactoryStopButtonPredicate);
+		buttons.add(cancelAction);
+		return cancelAction;	
 	}
 	
 	public ToolBarClearSelectionsAction buildAClearSelectionsButton(ArrayList<BioFabricImageIcon> buttons){
@@ -74,18 +106,18 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = "/images/ClearFabricSelected24.gif";
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(false).toString(); 
-		String inToolBar = new Boolean(true).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(true).toString();
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(true).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
 		String menuGravity = null; 
-		String toolBarGravity = new Float(5.03).toString();
+		String toolBarGravity = Float.valueOf(5.03f).toString();
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ToolBarClearSelectionsAction clearSelectionsAction = new ToolBarClearSelectionsAction(configProps, applicationManager, networkViewManager, taskFactoryPredicate);
+		ToolBarClearSelectionsAction clearSelectionsAction = new ToolBarClearSelectionsAction(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);
 		buttons.add(clearSelectionsAction);
 		return clearSelectionsAction;	
 	}
@@ -97,18 +129,18 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = "/images/Forward24.gif";
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(false).toString(); 
-		String inToolBar = new Boolean(true).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(true).toString();
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(true).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
 		String menuGravity = null; 
-		String toolBarGravity = new Float(5.03).toString();
+		String toolBarGravity = Float.valueOf(5.03f).toString();
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ToolBarCenterOnNextAction centerOnNextAction = new ToolBarCenterOnNextAction(configProps, applicationManager, networkViewManager, taskFactoryPredicate);
+		ToolBarCenterOnNextAction centerOnNextAction = new ToolBarCenterOnNextAction(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);
 		buttons.add(centerOnNextAction);
 		return centerOnNextAction;	
 	}
@@ -120,18 +152,18 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = "/images/Back24.gif";
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(false).toString(); 
-		String inToolBar = new Boolean(true).toString(); 
-		String insertSeparatorBefore = new Boolean(true).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(true).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
 		String menuGravity = null; 
-		String toolBarGravity = new Float(5.01).toString();
+		String toolBarGravity = Float.valueOf(5.01f).toString();
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ToolBarCenterOnPreviousAction centerOnPrevAction = new ToolBarCenterOnPreviousAction(configProps, applicationManager, networkViewManager, taskFactoryPredicate);
+		ToolBarCenterOnPreviousAction centerOnPrevAction = new ToolBarCenterOnPreviousAction(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);
 		buttons.add(centerOnPrevAction);
 		return centerOnPrevAction;	
 	}
@@ -143,14 +175,14 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = "/images/ZoomToFabricRect24.gif";
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(false).toString(); 
-		String inToolBar = new Boolean(true).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
 		String menuGravity = null; 
-		String toolBarGravity = new Float(5.00).toString();
+		String toolBarGravity = Float.valueOf(5.00f).toString();
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
@@ -166,14 +198,14 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = "/images/Find24.gif";
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(false).toString(); 
-		String inToolBar = new Boolean(true).toString(); 
-		String insertSeparatorBefore = new Boolean(true).toString();
-		String insertSeparatorAfter = new Boolean(true).toString();
+		String inMenuBar = Boolean.valueOf(false).toString(); 
+		String inToolBar = Boolean.valueOf(true).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(true).toString();
+		String insertSeparatorAfter = Boolean.valueOf(true).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
 		String menuGravity = null; 
-		String toolBarGravity = new Float(5.04).toString();
+		String toolBarGravity = Float.valueOf(5.04f).toString();
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
@@ -195,13 +227,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -218,13 +250,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -246,13 +278,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 		
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -270,13 +302,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = ResourceManager.getManager().getString("cytoMenuItemTitle.unAccumulateTooltip"); 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -299,13 +331,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -322,13 +354,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -350,18 +382,19 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ViewSelectARectangleAndZoom viewSelectARectangleAndZoomMenuItem = new ViewSelectARectangleAndZoom(configProps, applicationManager, networkViewManager, taskFactoryPredicate);		
+		ViewSelectARectangleAndZoom viewSelectARectangleAndZoomMenuItem = new ViewSelectARectangleAndZoom(configProps, applicationManager, 
+				networkViewManager, taskFactoryPredicate, cyEventHelperRef);		
 		buttons.add(viewSelectARectangleAndZoomMenuItem);
 		return viewSelectARectangleAndZoomMenuItem;	
 	}
@@ -373,13 +406,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -396,13 +429,13 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(30).toString(); 
+		String menuGravity = Float.valueOf(30f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
@@ -419,18 +452,18 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(true).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(true).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(31).toString(); 
+		String menuGravity = Float.valueOf(31f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ViewCenterOnPreviousSelection viewCenterOnPreviousSelectionMenuItem = new ViewCenterOnPreviousSelection(configProps, applicationManager, networkViewManager, taskFactoryPredicate);		
+		ViewCenterOnPreviousSelection viewCenterOnPreviousSelectionMenuItem = new ViewCenterOnPreviousSelection(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);		
 		buttons.add(viewCenterOnPreviousSelectionMenuItem);
 		return viewCenterOnPreviousSelectionMenuItem;	
 	}
@@ -442,18 +475,18 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(32).toString(); 
+		String menuGravity = Float.valueOf(32f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ViewZoomToCurrentSelection viewZoomToCurrentSelectionMenuItem = new ViewZoomToCurrentSelection(configProps, applicationManager, networkViewManager, taskFactoryPredicate);		
+		ViewZoomToCurrentSelection viewZoomToCurrentSelectionMenuItem = new ViewZoomToCurrentSelection(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);		
 		buttons.add(viewZoomToCurrentSelectionMenuItem);
 		return viewZoomToCurrentSelectionMenuItem;	
 	}
@@ -465,18 +498,18 @@ public class BioFabricAbstractCyActionBuilder {
 		String largeIconURL = null;
 		String smallIconURL = null;
 		String tooltip = title; 
-		String inMenuBar = new Boolean(true).toString(); 
-		String inToolBar = new Boolean(false).toString(); 
-		String insertSeparatorBefore = new Boolean(false).toString();
-		String insertSeparatorAfter = new Boolean(false).toString();
+		String inMenuBar = Boolean.valueOf(true).toString(); 
+		String inToolBar = Boolean.valueOf(false).toString(); 
+		String insertSeparatorBefore = Boolean.valueOf(false).toString();
+		String insertSeparatorAfter = Boolean.valueOf(false).toString();
 		String enableFor = ActionEnableSupport.ENABLE_FOR_NETWORK_AND_VIEW; 
 		String accelerator = null; 
-		String menuGravity = new Float(33).toString(); 
+		String menuGravity = Float.valueOf(33f).toString(); 
 		String toolBarGravity = null;
 				
 		configureZoomRectProperties(configProps, title, preferredMenu, largeIconURL, smallIconURL, tooltip, inMenuBar, inToolBar,
 				insertSeparatorBefore, insertSeparatorAfter, enableFor, accelerator, menuGravity, toolBarGravity);
-		ViewCenterOnNextSelection viewCenterOnNextSelectionMenuItem = new ViewCenterOnNextSelection(configProps, applicationManager, networkViewManager, taskFactoryPredicate);		
+		ViewCenterOnNextSelection viewCenterOnNextSelectionMenuItem = new ViewCenterOnNextSelection(configProps, applicationManager, networkViewManager, taskFactorySelectedNodeEdgePredicate);		
 		buttons.add(viewCenterOnNextSelectionMenuItem);
 		return viewCenterOnNextSelectionMenuItem;	
 	}
